@@ -20,6 +20,8 @@ ChangeLog for Privoxy
   file modification timestamps. This makes life harder for attackers
   who can leverage browser bugs to send fake Referers and intend to
   brute-force edit URLs.
+- Host information is gathered outside the main thread so it's less
+  likely to delay other incoming connections if the host is misconfigured.
 - The CGI editor supports the "disable all filters of this type"
   directives "-client-header-filter", "-server-header-filter",
   "-client-header-tagger" and "-server-header-tagger".
